--- a/app/components/ui/modal/modal.css
+++ b/app/components/ui/modal/modal.css
@@ -2,7 +2,11 @@
 
 @layer components {
   .modal {
-    @apply fixed top-0 left-0 right-0 z-50 hidden w-full h-full max-h-screen px-4 pt-4 overflow-x-hidden overflow-y-auto md:bottom-0 animate-[var(--animate-slide-up)];
+    @apply fixed top-0 left-0 right-0 z-40 hidden w-full h-full max-h-screen px-4 pt-4 overflow-x-hidden overflow-y-auto md:bottom-0 animate-[var(--animate-slide-up)];
+
+    .modal__container {
+      @apply mt-0;
+    }
   }
 
   .modal-dialog {
